--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,7 @@ body,
   display: flex;
   justify-content: center;
   align-items: center;
+  font-weight: 300;
 }
 
 .movies {
@@ -54,9 +55,10 @@ body,
 }
 
 .movie img {
-  position: relative;
-  top: -50px;
-  max-width: 120px;
+  position: relative;  /* 변동 없음... */
+  top: -100px;          /* 변동 없음... */
+  max-width: 180px;
+  width: 100%;
   margin-right: 30px;
   box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
     0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
